# testCMake

./: .gitignore  README.md
Demo_1/: CMakeLists.txt  main.cpp
Demo_2/: CMakeLists.txt  MyAdditions.cpp  MyAdditions.h  main.cpp
Demo_3/: CMakeLists.txt  main.cpp
Demo_3/math/: CMakeLists.txt  MyAdditions.cpp  MyDecrise.cpp  MyDecrise.h
Demo_4/: CMakeLists.txt  simulation.sh
Demo_4/src/: CMakeLists.txt  proceed.cpp
